@@ -49,6 +49,39 @@ else:
 
         return wrapper
 
+# If polars is available, wrap talib functions so that they support
+# polars.Series input
+try:
+    from polars import Series as _pl_Series
+except ImportError:
+    # polars not available, nothing to wrap
+    _polars_wrapper = lambda x: x
+else:
+    def _polars_wrapper(func):
+        @wraps(func)
+        def wrapper(*args, **kwargs):
+            # Use Series' float64 values if pandas, else use values as passed
+            args = [arg.to_numpy().astype(float) if isinstance(arg, _pl_Series) else arg
+                    for arg in args]
+            kwargs = {k: v.to_numpy().astype(float) if isinstance(v, _pl_Series) else v
+                      for k, v in kwargs.items()}
+
+            result = func(*args, **kwargs)
+
+            # check to see if we got a streaming result
+            first_result = result[0] if isinstance(result, tuple) else result
+            is_streaming_fn_result = not hasattr(first_result, '__len__')
+            if is_streaming_fn_result:
+                return result
+
+            # Series was passed in, Series gets out
+            if isinstance(result, tuple):
+                # Handle multi-array results such as BBANDS
+                return tuple(_pl_Series(arr) for arr in result)
+            return _pl_Series(result)
+
+        return wrapper
+
 from ._ta_lib import (
     _ta_initialize, _ta_shutdown, MA_Type, __ta_version__,
     _ta_set_unstable_period as set_unstable_period,
@@ -72,6 +105,20 @@ stream_func_names = ['stream_%s' % fname for fname in __TA_FUNCTION_NAMES__]
 stream = __import__("stream", globals(), locals(), stream_func_names, level=1)
 for func_name, stream_func_name in zip(__TA_FUNCTION_NAMES__, stream_func_names):
     wrapped_func = _pandas_wrapper(getattr(stream, func_name))
+    setattr(stream, func_name, wrapped_func)
+    globals()[stream_func_name] = wrapped_func
+
+# wrap them with polars
+func = __import__("_ta_lib", globals(), locals(), __TA_FUNCTION_NAMES__, level=1)
+for func_name in __TA_FUNCTION_NAMES__:
+    wrapped_func = _polars_wrapper(getattr(func, func_name))
+    setattr(func, func_name, wrapped_func)
+    globals()[func_name] = wrapped_func
+
+stream_func_names = ['stream_%s' % fname for fname in __TA_FUNCTION_NAMES__]
+stream = __import__("stream", globals(), locals(), stream_func_names, level=1)
+for func_name, stream_func_name in zip(__TA_FUNCTION_NAMES__, stream_func_names):
+    wrapped_func = _polars_wrapper(getattr(stream, func_name))
     setattr(stream, func_name, wrapped_func)
     globals()[stream_func_name] = wrapped_func
 
